src/test/ui/range/range_traits-5.stderr
error: compilation successful
  --> $DIR/range_traits-5.rs:19:1
   |
LL | fn main() {} //~ ERROR success
   | ^^^^^^^^^^^^

error: aborting due to previous error

