src/test/ui/range/range_traits-5.rs
// compile-pass

use std::ops::*;

#[derive(Copy, Clone)]
struct R(RangeFull);


fn main() {}

